--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0;
   display: inline;
 }
+
+.shiny-progress .progress {
+  height: 50px;
+}
+
+.shiny-progress .bar {
+  opacity: 1.0;
+}
